# wagtail-periodic-review

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: publish.yml  ruff.yml  test.yml
src/wagtail_periodic_review/: utils.py  views.py  wagtail_hooks.py
src/wagtail_periodic_review/templates/reports/: periodic_review_report_results.html
src/wagtail_periodic_review/templates/reports/includes/: list_with_review_dates.html
src/wagtail_periodic_review/templates/wagtailadmin/periodic_review/: home_panel.html
