[project]
name = "wagtail-periodic-review"
description = "A Wagtail package for periodic page content reviews"
authors = [{name = "Andy Babic", email = "andy.babic@torchbox.com"}]
maintainers = [{name = "Dan Braghis", email="dan.braghis@torchbox.com"}]
readme = "README.md"
license = "BSD-3-Clause"
license-files = [ "LICENSE" ]
keywords = ["Wagtail", "Django", "content", "review"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 6",
    "Framework :: Wagtail :: 7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "Wagtail>=6.3",
    "python-dateutil>=2.8,<3.0.0"
]

[project.urls]
Source = "https://github.com/torchbox/wagtail-periodic-review/blob/main/CHANGELOG.md"
Changelog = "https://github.com/torchbox/wagtail-periodic-review/blob/main/CHANGELOG.md"


[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "wagtail_periodic_review"

[tool.flit.sdist]
exclude = [
    "tests",
    "Makefile",
    "docs",
    ".*",
    "*.json",
    "*.ini",
    "*.sqlite3",
    "*.yml",
    "*.yaml",
    "ruff.toml",
    "manage.py",
]
